--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,5 @@
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### Xcode ###
 # Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
-## User settings
-xcuserdata/
-
-## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
-
-## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
-DerivedData/
-*.moved-aside
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -50,10 +8,15 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-
-### Projects ###
-*.xcodeproj
-*.xcworkspace
+xcuserdata/
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+*.xcuserstate
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
 
 # macOS
 .DS_Store
@@ -61,8 +24,6 @@ DerivedData/
 .LSOverride
 
 # Tuist derived files
-graph.dot
-Derived/
 .build/
 Tuist/Dependencies/
 Projects/*/Derived/
@@ -70,7 +31,7 @@ Projects/*/Derived/
 # API Keys and Environment Variables
 .env
 *.env
-Config/*
+Config.plist
 Secrets.plist
 InfuraConfig.plist
 
@@ -86,12 +47,12 @@ InfuraConfig.plist
 *.mobileprovision
 *.provisionprofile
 
-### Swift Package Manager ###
-.build/
+# SwiftPM
 .swiftpm/
 
 # CocoaPods
 Pods/
+*.xcworkspace
 
 # Fastlane
 fastlane/report.xml
